# CuteSockets

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.a79f756  Main.qml  README.md  main.cpp  qml.qrc
Controllers/: appmanager.cpp  appmanager.h  tcpclient.cpp  tcpclient.h  udpserver.cpp  udpserver.h
inc/public/CuteSockets/: app.h  appmanager.h  tcpserver.h  udpserver.h
qml/: ClientTab.qml  ServerTab.qml  UdpTab.qml
src/: app.cpp  tcpclient.cpp  tcpserver.cpp  udpserver.cpp
ui/: AboutTab.qml  ClientTab.qml  ServerTab.qml  UdpTab.qml  UdpTab.qml.autosave
